Yes I created for loader animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
+    <div class="loader">
+        <h1>Wait</h1>
+        <h1>A</h1>
+        <h1>Sec's</h1>
+    </div>
     <div class="page1">
         <nav>
             <div class="nav-logo">
@@ -39,6 +44,8 @@
 
         </div>
             </div>
+
+  <script src="script.js"></script>
     
 </body>
 </html>
